[package]
name = "http-measurement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
dns-lookup = "2.0.4"
headers = "0.4.0"
rustls = { version = "0.23.20", features = ["ring"] }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
ureq = { version = "2.12.1", features = ["json"] }
webpki-roots = "0.26.7"

[profile.release]
strip = "debuginfo"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "http-measurement"
path = "src/main.rs"
